# voting_app

./: .env  .gitignore  Cargo.toml
src/: main.rs  models.rs  repository.rs
static/: app.js  index.html
