[package]
name = "voting_app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dashmap = "6.1.0"
log = "0.4.28"
rocket = { version = "0.5.1", features = ["json"]}
rusqlite = "0.37.0"
serde = "1.0.219"
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"]}
